--- a/Profil/Authentistdesign.css
+++ b/Profil/Authentistdesign.css
@@ -38,6 +38,8 @@ button {
 
 .container {
 	display: flex;
+	max-width: 100vh;
+	max-height: 100vh;
 }
 
 /* Barre de gauche */
@@ -53,11 +55,25 @@ button {
 
 }
 
+.div1 h3{
+	width: 800px;
+}
+
 #Juliette {
 	margin-left: 0px;
 	font-family: 'Maitree';
-	font-size: 26px;
-	padding-left: 0px;
+	font-size: 22px;
+	padding-left: 60px;
+	width: 500px;
+}
+
+#photojuliette{
+	margin-left: 60px;
+	margin-top: 30px;
+	border-style: solid;
+	border-color: black;
+	border-width: 0.5px;
+
 }
 
 .div1 {
@@ -65,14 +81,21 @@ button {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	width: 25%;
+	width: 20%;
+}
+
+#sedeco{
+	margin-top: 230px;
+	margin-left: 26px;
+	position: center;
+	width: 200px;
 }
 
 .div2 {
 	background: #94BCF9;
-	width: 75%;
 	height: 100vh;
-	padding: 0px 40px
+	padding: 0px 50px;
+	margin-left: 92px;
 }
 
 .banner {
@@ -87,7 +110,7 @@ button {
 	justify-content: flex-start;
 	align-items: flex-start;
 	background: #94BCF9;
-	gap: 20px;
+	gap: 10px;
 }
 
 .profil {
@@ -106,6 +129,7 @@ button {
 
 .profil li:nth-child(1){
 	color: #FFFFFF;
+
 }
 
 fieldset{
@@ -113,12 +137,29 @@ fieldset{
 	margin: 0;
 	background-color: #FFFFFF;
 	width: 377px;
+	border-style: solid;
+    border-width: 1px;
+    border-color: black;
 }
+
+
 
 .Identite{
 	line-height: 30px;
 	padding-left: 40px;
 }
+
+.Livraison{
+	line-height: 30px;
+	padding-left: 40px;
+}
+
+.Contact{
+	line-height: 30px;
+	padding-left: 40px;
+	margin-top: 10px;
+}
+
 
 .Identite img{
 	margin-left: 80px;
@@ -147,5 +188,27 @@ label{
 	background-color: #94BCF9;
 	width: 450px;
 	color: white;
+	margin-left: 0px;
+}
+
+.menubarregauche li {
+	padding-left: 60px;
+}
+
+.div3{
+	display: flex;
+	gap: 10px;
+	flex-direction: column;
+}
+
+.div2 button{
+	position: center;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+}
+
+.div2 button img{
+	width: 27px;
 }
 
