--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,7 +1,154 @@
+.header {
+	background-color: #FFFEF3;
+	display: flex;
+    align-items: center;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0 88px;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+}
+
+
+.menu .menu-header li {
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #000000;
+	text-decoration: none;
+}
+
+.part-right .part-top .menu .menu-header .btn {
+	border: 1px solid black;
+	padding: 0px 10px;
+	background-color: #DABAF9;
+	height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+
+.part-right .part-top {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+    height: 60px;
+}
+
+
+.icons {
+	display: flex;
+	justify-content: flex-end;
+	gap: 20px;
+	height: 40px;
+}
+
+.part-bottom .menu-2 .menu-header-2 li {
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #000000;
+	text-decoration: none;
+	font-weight: 400;
+	text-decoration: none;
+	display: flex;
+	flex-direction: row;
+}
+
+
+.look {
+	width: 140px;
+	height: 40px;
+	background-color: #FFFEF3;
+	border: 1px solid #000000;
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #7B7B7B;
+	padding-left: 90px;
+    margin-top: 5px;
+	background-image: url('../Images/Loupe.svg');
+	background-repeat: no-repeat;
+	background-position-x: 20px;
+	background-position-y: center;
+}
+
+.part-bottom {
+	display: flex;
+	align-items: center;
+}
+
+.part-bottom .menu-2 .menu-header-2 {
+	display: flex;
+	gap: 30px;
+    margin: 0 160px 0 0;
+}
+
+.part-top .menu .menu-header {
+	display: flex;
+	gap: 30px;
+	align-items: center;
+    padding-left: 0;
+}
+
+.header .border-1 {
+	border-top: 3px solid #000;
+	width : 100%;
+}
+
+.part-top {
+	border-bottom: 1px solid black;
+	margin-left: 40px;
+	display: flex;
+}
+
+.coeur {
+	border-right: 1px solid black;
+	padding-right: 20px;
+}
+
+
+.person {
+	border-right: 1px solid black;
+	padding-right: 20px;
+}
+
+.part-left {
+	border-right: 1px solid black;
+	padding-right: 20px;
+	height: 120px;
+}
+
+.logo-auth {
+	padding-top: 12%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
     background-color: #FFFEF3;
     font-family: 'Maitree';
-    font-size: 22px;
+    font-size: 18px;
+    margin: 0;
 }
 
 h1 {
@@ -21,7 +168,7 @@ h2 {
 }
 
 h3 {
-    font-size: 26px;
+    font-size: 22px;
 }
 
 h3 b {
@@ -40,12 +187,12 @@ button {
 
 hr {
     border-top: 0.2px solid black;
-    margin: 40px 0;
 }
 
 /*Introduction*/
 
 .intro {
+    padding-top: 200px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -78,13 +225,13 @@ hr {
     border-style: solid;
     border-width: 1px;
     width: 440px;
-    height: 379px;
+    height: 342px;
     background-color: rgba(255, 255, 255, 0.7);
 }
 
 .conceptDiv p {
     width: 400px;
-    margin: 20px;
+    margin: 0 20px;
     line-height: 35px;
 }
 
@@ -97,7 +244,7 @@ hr {
 .conceptDiv button {
     margin: 0 114px;
     position: absolute;
-    top: 300px;
+    top: 269px;
 }
 
 .conceptAlign img {
@@ -114,7 +261,7 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     margin-top: 30px;
 }
 
@@ -134,24 +281,24 @@ hr {
     background-color: black;
     color: white;
     width: 110px;
-    padding: 8px 0;
+    height: 20px;
+    padding: 2px 0 8px 0;
     text-align: center;
     font-weight: bold;
 }
 
 #taille {
-    padding-top: 10px;
     padding-left: 5px;
 }
 
 .tableauDiv img{
-    width: 326px;
+    width: 270px;
 }
 
 .tableauDiv h3 {
     padding-left: 5px;
-    padding-bottom: 5px;
-    margin: 0;
+    margin: -10px 0 0 0;
+    font-size: 20px;
 }
 
 .tableauDiv p {
@@ -159,11 +306,11 @@ hr {
 }
 
 #grand {
-    width: 500px;
-    height: 80px;
-    font-size: 22px;
+    width: 405px;
+    height: 60px;
+    font-size: 18px;
     background-color: #FF8059;
-    margin:50px auto;
+    margin: 20px auto;
     display:block;
 }
 
@@ -173,26 +320,26 @@ hr {
     background-color: rgba(255, 255, 255, 0.7);
     border-style: solid;
     border-width: 1.5px;
-    margin: 30px;
+    margin: 30px 120px 30px 220px;
+    width: 1100px;
 }
 
 .contenu {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 50px;
+    gap: 400px;
 }
 
 .text {
     width: 600px;
-    margin: 50px 20px;
+    margin: 50px 20px 0 -120px;
 }
 
 .decor {
     position: relative;
-    height: 570px;
-    width: 570px;;
-    margin-top: 50px;
+    width: 300px;
+    margin-left: -400px;
 }
 
 .img1 {
@@ -200,19 +347,21 @@ hr {
     top: 150px;
     left: 40px;
     z-index: 3;
+    width: 75%;
 }
 
 .img2 {
     position: absolute;
-    left: 390px;
+    left: 290px;
     top: 50px;
     z-index: 3;
+    width: 38%;
 }
 
 .rect1{
     position: absolute;
-    height: 437px;
-    width: 377px;
+    height: 330px;
+    width: 295px;
     z-index: 1;
     top: 115px;
     left: 5px;
@@ -220,51 +369,22 @@ hr {
 
 .rect2{
     position: absolute;
-    height: 437px;
-    width: 377px;
+    height: 330px;
+    width: 225px;
     top: 20px;
     left: 200px;
     z-index: 2;
 }
 
-.fleche{
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    justify-content: flex-end;
-    margin: 20px 30px;
-}
-
-#prec {
-    padding-top: 10px;
-    height: 45px;
-    width: 45px;
-    border-style: solid;
-    border-width: 1px;
-    background-color: rgba(255, 255, 255, 0.7);
-    transform: rotate(180deg);
-    position: relative;
-}
-
-#suiv {
-    padding-top: 10px;
-    height: 45px;
-    width: 45px;
-    border-style: solid;
-    border-width: 1px;
-    background-color: rgba(255, 255, 255, 0.7);
-    position: relative;
-}
-
 #a {
-    margin: 30px 0;
+    margin: 30px 0 10px 0;
     text-align: center;
     font-weight: bold;
     text-decoration: underline;
 }
 
 .text h3{
-    margin: 30px 0;
+    margin: 0 18px 20px 0;
 }
 
 .text h3 p {
@@ -300,14 +420,17 @@ hr {
 .commentDiv {
     display: inline-block;
     text-align: center;
-    padding: 14px;
     white-space: pre-wrap;
+}
+
+.commentDiv:nth-child(odd){
+    padding: 0 14px;
     width: 400px;
 }
 
 #img {
     height: 200px;
-    margin-bottom: 180px;
+    margin-bottom: 90px;
 }
 
 #img:nth-child(4n){
@@ -320,13 +443,43 @@ hr {
     margin-right: auto;
     border-style: solid;
     border-width: 1px;
-    padding: 25px;
+    padding: 15px;
     background-color: rgba(255, 255, 255, 0.7);
+    width: 6%;
 }
 
 #explications h3 {
     font-weight: bold;
     margin: -45px 0 -80px 0;
+}
+
+.fleche{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: flex-end;
+    margin: 20px 160px;
+}
+
+#prec {
+    padding-top: 10px;
+    height: 45px;
+    width: 45px;
+    border-style: solid;
+    border-width: 1px;
+    background-color: rgba(255, 255, 255, 0.7);
+    transform: rotate(180deg);
+    position: relative;
+}
+
+#suiv {
+    padding-top: 10px;
+    height: 45px;
+    width: 45px;
+    border-style: solid;
+    border-width: 1px;
+    background-color: rgba(255, 255, 255, 0.7);
+    position: relative;
 }
 
 /*témoignage*/
@@ -348,63 +501,67 @@ hr {
 .img01 {
     position: absolute;
     top: 43px;
-    left: -50px;
+    left: 10px;
     z-index: 3;
+    width: 200px;
 }
 
 .img02 {
     position: absolute;
-    left: -50px;
-    top: 350px;
+    left: 10px;
+    top: 290px;
     z-index: 3;
+    width: 200px;
 }
 
 .img03 {
     position: absolute;
-    top: 170px;
+    top: 130px;
     left: -260px;
     z-index: 3;
+    width: 200px;
 }
 
 .img04 {
     position: absolute;
     left: -260px;
-    top: 477px;
+    top: 377px;
     z-index: 3;
+    width: 200px;
 }
 
 .rect01{
     position: absolute;
-    height: 287px;
-    width: 243px;
+    height: 233px;
+    width: 189px;
     z-index: 1;
     top: 10px;
-    left: -5px;
+    left: 50px;
 }
 
 .rect02{
     position: absolute;
-    height: 264px;
-    width: 193px;
-    top: 320px;
-    left: -90px;
+    height: 210px;
+    width: 139px;
+    top: 260px;
+    left: -20px;
     z-index: 2;
 }
 
 .rect03{
     position: absolute;
-    height: 244px;
-    width: 248px;
+    height: 190px;
+    width: 194px;
     z-index: 1;
-    top: 135px;
+    top: 95px;
     left: -210px;
 }
 
 .rect04{
     position: absolute;
-    height: 244px;
-    width: 191px;
-    top: 520px;
+    height: 190px;
+    width: 137px;
+    top: 410px;
     left: -290px;
     z-index: 2;
 }
@@ -426,30 +583,30 @@ hr {
 }
 
 #nom1{
-    width:310px;
-    left: 320px;
+    width:255px;
+    left: 380px;
     top: 0px;
     z-index: 5;
 }
 
 #nom2{
-    width:335px;
-    left: 320px;
-    top: 310px;
+    width:272px;
+    left: 380px;
+    top: 250px;
     z-index: 5;
 }
 
 #nom3{
-    width:375px;
+    width:305px;
     left: -700px;
-    top: 130px;
+    top: 90px;
     z-index: 5;
 }
 
 #nom4{
-    width:326px;
+    width:265px;
     left: -700px;
-    top: 430px;
+    top: 335px;
     z-index: 5;
 }
 
@@ -458,26 +615,26 @@ hr {
 }
 
 #quote11{
-    left: 20px;
-    top: 88px;
+    left: 120px;
+    top: 80px;
     z-index: 5;
 }
 
 #quote12{
-    left: 20px;
-    top: 400px;
+    left: 120px;
+    top: 340px;
     z-index: 5;
 }
 
 #quote13{
-    left: -410px;
-    top: 228px;
+    left: -500px;
+    top: 190px;
     z-index: 5;
 }
 
 #quote14{
-    left: -410px;
-    top: 538px;
+    left: -500px;
+    top: 428px;
     z-index: 5;
 }
 
@@ -487,26 +644,26 @@ hr {
 }
 
 #quote21{
-    left: 350px;
-    top: 238px;
+    left: 450px;
+    top: 178px;
     z-index: 5;
 }
 
 #quote22{
-    left: 350px;
-    top: 558px;
+    left: 430px;
+    top: 468px;
     z-index: 5;
 }
 
 #quote23{
-    left: -90px;
-    top: 398px;
+    left: -180px;
+    top: 290px;
     z-index: 5;
 }
 
 #quote24{
-    left: -90px;
-    top: 708px;
+    left: -180px;
+    top: 558px;
     z-index: 5;
 }
 
@@ -517,28 +674,235 @@ hr {
 
 #text1{
     width:310px;
-    left: 50px;
+    left: 150px;
     top: 78px;
     z-index: 5;
 }
 
 #text2{
     width:310px;
-    left: 50px;
-    top: 398px;
+    left: 150px;
+    top: 338px;
     z-index: 5;
 }
 
 #text3{
     width:310px;
-    left: -380px;
-    top: 228px;
+    left: -470px;
+    top: 188px;
     z-index: 5;
 }
 
 #text4{
     width:310px;
-    left: -380px;
-    top: 538px;
+    left: -470px;
+    top: 425px;
     z-index: 5;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Footer*/
+
+.footer {
+	background-color: black;
+    margin-top: 42%;
+}
+
+.top-part {
+	display: flex;
+}
+
+.footer .top-part .partie-1 {
+	margin: 40px;
+}
+
+.footer p {
+	color: white;
+	font-family: 'Maitree';
+}
+
+.exclu {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 15px;
+}
+
+.cookies {
+	font-size: 18px;
+	font-weight: regular;
+	margin-top: 15px;
+}
+
+.cookies a {
+	color: white;
+}
+
+.logo-authentist {
+	margin-bottom: 20px;
+}
+
+.reseaux{
+	display: flex;
+	gap: 20px;
+	margin-bottom: 30px;
+}
+
+.email {
+	width: 300px;
+	height: 71px;
+	left: 82px;
+	top: 6476px;
+	background: #FFFEF3;
+	border: 1px solid #000000;
+	font-family: 'Maitree';
+	font-size: 18px;
+}
+
+input::placeholder {
+    color: #000000;
+}
+
+input {
+	padding-left: 30px;
+}
+
+.ok {
+	width: 101px;
+	height: 75px;
+	left: 433px;
+	top: 6476px;
+	background: #94BCF9;
+	border: 1px solid #000000;
+	font-size: 18px;
+	font-family: 'Maitree';
+}
+
+.forme {
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
+}
+
+li {
+	color: white;
+	text-decoration: none;
+	font-size: 18px;
+	font-family: 'Maitree';
+	font-weight: 400;
+	display: flex;
+	flex-direction: row;
+}
+
+ul {
+	color: white;
+	font-size: 18px;
+	font-weight: bold;
+	font-family: 'Maitree';
+	font-weight: 400;
+}
+
+.footer .partie-2 {
+	margin: 40px;
+
+}
+
+.artiste {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 50px;
+}
+
+.plan {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 50px;
+}
+
+.aide {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 50px;
+}
+
+.footer .partie-3 {
+	margin: 40px;
+
+}
+
+.footer .partie-4 {
+	margin: 40px;
+
+}
+
+.paiement {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.icon-paiement {
+	display: flex;
+	gap: 20px;
+}
+
+.foot .autre {
+	display: flex;
+}
+
+.separation {
+	margin-bottom: 70px;
+    line-height: 35px;
+}
+
+.foot ul {
+	display: flex;
+	gap: 20px;
+	margin-left: 10px;
+}
+
+.foot li{
+    font-size: 16px;
+}
+
+.final {
+    margin-left: 475px;
+}
+
+
+.second-part {
+	padding-bottom: 10px;
+}
+
+.liste-icon {
+	padding-left: 0px;
+}
+
+
+.all-header{
+	margin: 80px;
+}
+
+.body {
+	background-color: #FFFEF3;
+}
+
+.lesartistes li {
+	line-height: 35px;
+}
+
+.lesguides li {
+	line-height: 35px;
+}
+
+/*Responsive (ou pas...)*/
