--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -154,7 +154,7 @@ body {
 h1 {
     font-family: 'Unbounded';
     font-size: 40px;
-    width: 980px;
+    width: 850px;
     font-weight: bold;
     line-height: 50px;
 }
@@ -164,7 +164,7 @@ h2 {
     font-size: 36px;
     font-weight: bold;
     margin-top: 80px;
-    margin-left: 30px;
+    margin-left: 80px;
 }
 
 h3 {
@@ -196,6 +196,7 @@ hr {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     gap: 73px;
 }
 
@@ -225,7 +226,7 @@ hr {
     border-style: solid;
     border-width: 1px;
     width: 440px;
-    height: 342px;
+    height: 322px;
     background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -244,7 +245,7 @@ hr {
 .conceptDiv button {
     margin: 0 114px;
     position: absolute;
-    top: 269px;
+    top: 249px;
 }
 
 .conceptAlign img {
@@ -906,3 +907,9 @@ ul {
 }
 
 /*Responsive (ou pas...)*/
+
+@media(max-width: 700px) {
+    
+    
+
+}
