--- a/produit/styles.css
+++ b/produit/styles.css
@@ -2,7 +2,7 @@
 body {
     background-color: #FFFEF3;
     font-family: 'Maitree';
-    font-size: 22px;
+    font-size: 18px;
 }
 
 h3 {
@@ -66,3 +66,39 @@ button{
 }
 
 
+
+
+
+
+.audios{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.audioVideo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  border-style: solid;
+  border-width: 1px;
+  width: 230px;
+  height: 50px;
+}
+
+.informations{
+  margin-top: 20px
+}
+
+.info{
+  padding: 15px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.info:nth-child(odd){
+  border-top: solid 1px black;
+  border-bottom: solid 1px black;
+}
