--- a/produit/styles.css
+++ b/produit/styles.css
@@ -1,70 +1,257 @@
+.header {
+	background-color: #FFFEF3;
+	display: flex;
+    align-items: center;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0 88px;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+}
+
+
+.menu .menu-header li {
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #000000;
+	text-decoration: none;
+}
+
+.part-right .part-top .menu .menu-header #btn {
+	border: 1px solid black;
+	padding: 0px 10px;
+	background-color: #DABAF9;
+	height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+
+.part-right .part-top {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+    height: 60px;
+}
+
+
+.icons {
+	display: flex;
+	justify-content: flex-end;
+	gap: 20px;
+	height: 40px;
+}
+
+.part-bottom .menu-2 .menu-header-2 li {
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #000000;
+	text-decoration: none;
+	font-weight: 400;
+	text-decoration: none;
+	display: flex;
+	flex-direction: row;
+}
+
+
+.look {
+	width: 140px;
+	height: 40px;
+	background-color: #FFFEF3;
+	border: 1px solid #000000;
+	font-family: 'Maitree';
+	font-size: 18px;
+	color: #7B7B7B;
+	padding-left: 90px;
+    margin-top: 5px;
+	background-image: url('../Images/Loupe.svg');
+	background-repeat: no-repeat;
+	background-position-x: 20px;
+	background-position-y: center;
+}
+
+.part-bottom {
+	display: flex;
+	align-items: center;
+}
+
+.part-bottom .menu-2 .menu-header-2 {
+	display: flex;
+	gap: 30px;
+    margin: 0 120px 0 0;
+    padding-left: 40px;
+}
+
+.part-top .menu .menu-header {
+	display: flex;
+	gap: 30px;
+	align-items: center;
+    padding-left: 0;
+}
+
+.header .border-1 {
+	border-top: 3px solid #000;
+	width : 100%;
+}
+
+.part-top {
+	border-bottom: 1px solid black;
+	margin-left: 40px;
+	display: flex;
+}
+
+.coeur {
+	border-right: 1px solid black;
+	padding-right: 20px;
+}
+
+
+.person {
+	border-right: 1px solid black;
+	padding-right: 20px;
+}
+
+.part-left {
+	border-right: 1px solid black;
+	padding-right: 20px;
+	height: 120px;
+}
+
+.logo-auth {
+	padding-top: 12%;
+}
+
+
 
 body {
-    background-color: #FFFEF3;
-    font-family: 'Maitree';
-    font-size: 18px;
+  background-color: #FFFEF3;
+  font-family: 'Maitree';
+  font-size: 18px;
 }
 
 h3 {
-    font-family: 'Maitree';
-    font-size: 26px;
-    font-weight: bold;
-    margin-top: 50px;
+  font-family: 'Maitree';
+  font-size: 26px;
+  font-weight: bold;
+  margin-top: 50px;
 }
 
 .total {
-  margin:80px;
+margin:80px;
+margin-top: 0;
+padding-top: 150px;
 }
 .acceuil-produit{
-  margin-bottom: 40px;
+margin-bottom: 40px;
+margin-left: 50px;
 }
 
 .petiteimage{
-  margin-right: 12px;
-  gap:19px;
-  display: flex;
-  flex-direction:column;
+margin-right: 12px;
+gap:19px;
+display: flex;
+flex-direction:column;
 }
 
-.prix {
-    background-color: black;
-    color: white;
-    width: 110px;
-    padding: 30px 0;
-    text-align: center;
-    font-weight: bold;
+.price-box {
+background-color: black;
+width: 160px;
+height: 120px;
+display: flex;
+justify-content: center;
+align-items: center;
+color: white;
+font-size: 26px;
+font-weight: bold;
+margin-left:50px;
 }
-button{
-  font-family: 'Maitree';
-  background-color: #FF8059;
-  color: b;
-  padding: 10px 20px;
-  border-radius: 0px;
-  font-size: 18px;
-  font-weight: bold;
-  text-decoration: none;
+.btn{
+font-family: 'Maitree';
+background-color: #FF8059;
+padding: 10px 20px;
+border: solid 1px black;
+border-radius: 0px;
+font-size: 18px;
+font-weight: bold;
+text-decoration: none;
+margin-top: 10px;
 }
 
 .contenu-produit {
-  display: flex;
+display: flex;
+margin-left: -50px;
+height: 510px;
+}
+.images{
+display: flex;
+height: 1000px;
 }
 .imageproduit{
-  height: 400px;
+height: 550px;
+position: relative;
+left: 100px;
 }
 #petite1{
-  height: 190px;
+height: 265px;
+position: relative;
+left: 100px
 }
 #petite2{
-  height: 190px;
+height: 265px;
+position: relative;
+left: 100px
 }
 .product-details{
-  margin-left:200px;
+margin-left:200px;
 }
 .nom-produit-prix{
-  display:flex;
-  flex-direction: row;
+display:flex;
+flex-direction: row;
+}
+.produit-vector{
+display:flex;
+flex-direction: row;
+position: relative;
+top: -45px;
+}
+.imagevector{
+margin-left:20px;
+position: relative;
+top: 25px;
+width: 30px;
 }
 
+.product-title{
+position: relative;
+top: -25px;
+}
+
+
+
+.share {
+position: relative;
+background-color: rgba(255, 255, 255, 0.7);
+width: 40px;
+height: 40px;
+border-radius: 0px;
+border: solid 1px black;
+top: -540px;
+left:383px
+
+}
+.favoris{
+position: relative;
+background-color: rgba(255, 255, 255, 0.7);
+border: solid 1px black;
+width: 39px;
+height: 36px;
+border-radius: 0px;
+top: -581px;
+left:440px;
+padding-top: 4px;
+padding-left: 1px;
+}
 
 
 
@@ -74,6 +261,7 @@ button{
   display: flex;
   flex-direction: row;
   gap: 20px;
+  margin-bottom: 45px;
 }
 
 .audioVideo{
@@ -101,4 +289,338 @@ button{
 .info:nth-child(odd){
   border-top: solid 1px black;
   border-bottom: solid 1px black;
+}
+
+.p {
+  padding: 45px 0 25px 0;
+}
+
+.nom-produit {
+  line-height: 30px;
+}
+
+
+h1 {
+  font-family: 'Unbounded';
+  font-size: 40px;
+  width: 980px;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+h2 {
+  font-family: 'Unbounded';
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 80px;
+  margin-left: 30px;
+}
+
+h3 b {
+  font-weight: bold;
+}
+
+button{
+  border: none;
+  background-color: #FFFEF3;
+  flex-direction: horizontal;
+  display: flex;
+}
+
+hr {
+  border-top: 0.2px solid black;
+  margin: 40px 0;
+}
+
+
+/*Sélection*/
+
+.tableauCat {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 30px;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+  scroll-behavior: smooth;
+}
+
+.tableauDiv {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-style: solid;
+  border-width: 1.5px;
+}
+
+#tableauAlign {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#prix {
+  background-color: black;
+  color: white;
+  width: 110px;
+  height: 20px;
+  padding: 5px 0;
+  text-align: center;
+  font-weight: bold;
+}
+
+#taille {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.tableauDiv img{
+  width: 270px;
+}
+
+.tableauDiv h3 {
+  padding-left: 5px;
+  margin: 5px 0;
+  font-size: 18px;
+}
+
+.tableauDiv p {
+  margin: 0;
+}
+
+.onhover {
+  display: none;
+  font-size: 16px;
+  margin-left: 5px;
+  margin-bottom: 15px;
+  line-height: 28px;
+}
+
+.tableauDiv:hover > .onhover{
+  display: block;
+}
+
+.tableauDiv:hover > img{
+  height: 245.5px;
+  width: 270px;
+  object-fit: cover;
+}
+
+.fleche{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: flex-end;
+  margin: 20px 160px;
+}
+
+#selection{
+  margin-left: 20px;
+}
+
+#autreArtiste{
+  margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.footer {
+background-color: black;
+  margin-top: 2%;
+}
+
+.top-part {
+display: flex;
+}
+
+.footer .top-part .partie-1 {
+margin: 40px;
+}
+
+.footer p {
+color: white;
+font-family: 'Maitree';
+}
+
+.exclu {
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 15px;
+}
+
+.cookies {
+font-size: 18px;
+font-weight: regular;
+margin-top: 15px;
+}
+
+.cookies a {
+color: white;
+}
+
+.logo-authentist {
+margin-bottom: 20px;
+}
+
+.reseaux{
+display: flex;
+gap: 20px;
+margin-bottom: 30px;
+}
+
+.email {
+width: 300px;
+height: 71px;
+left: 82px;
+top: 6476px;
+background: #FFFEF3;
+border: 1px solid #000000;
+font-family: 'Maitree';
+font-size: 18px;
+}
+
+input::placeholder {
+  color: #000000;
+}
+
+input {
+padding-left: 30px;
+}
+
+.ok {
+  display: block;
+width: 101px;
+height: 74.5px;
+left: 433px;
+top: 6476px;
+background: #94BCF9;
+border: 1px solid #000000;
+font-size: 18px;
+font-family: 'Maitree';
+}
+
+.forme {
+display: flex;
+flex-direction: row;
+align-items: stretch;
+}
+
+li {
+color: white;
+text-decoration: none;
+font-size: 18px;
+font-family: 'Maitree';
+font-weight: 400;
+display: flex;
+flex-direction: row;
+}
+
+ul {
+color: white;
+font-size: 18px;
+font-weight: bold;
+font-family: 'Maitree';
+font-weight: 400;
+}
+
+.footer .partie-2 {
+margin: 40px;
+
+}
+
+.artiste {
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 50px;
+}
+
+.plan {
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 50px;
+}
+
+.aide {
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 50px;
+}
+
+.footer .partie-3 {
+margin: 40px;
+
+}
+
+.footer .partie-4 {
+margin: 40px;
+
+}
+
+.paiement {
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 10px;
+}
+
+.icon-paiement {
+display: flex;
+gap: 20px;
+}
+
+.foot .autre {
+display: flex;
+}
+
+.separation {
+margin-bottom: 70px;
+  line-height: 35px;
+}
+
+.foot ul {
+display: flex;
+gap: 20px;
+margin-left: 10px;
+}
+
+.foot li{
+  font-size: 16px;
+}
+
+.final {
+  margin-left: 475px;
+}
+
+
+.second-part {
+padding-bottom: 10px;
+}
+
+.liste-icon {
+padding-left: 0px;
+}
+
+
+.all-header{
+margin: 80px;
+}
+
+.body {
+background-color: #FFFEF3;
+}
+
+.lesartistes li {
+line-height: 35px;
+}
+
+.lesguides li {
+line-height: 35px;
 }
