--- a/produit/styles.css
+++ b/produit/styles.css
@@ -1,40 +1,19 @@
-.header {
-	background-color: #FFFEF3;
-	display: flex;
-    align-items: center;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding: 0 88px;
-    position: fixed;
-    z-index: 10;
-    width: 100%;
-}
-
-
-.menu .menu-header li {
-	font-family: 'Maitree';
-	font-size: 18px;
-	color: #000000;
-	text-decoration: none;
-}
-
-.part-right .part-top .menu .menu-header #btn {
+#btn {
 	border: 1px solid black;
 	padding: 0px 10px;
 	background-color: #DABAF9;
-	height: 50px;
-    display: flex;
-    align-items: center;
+	height: 33px;
+  display: flex;
+  align-items: center;
 }
 
-
-.part-right .part-top {
+.part-top {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-    height: 60px;
+  height: 52px;border-bottom: 1px solid black;
+	margin-left: 20px;
 }
-
 
 .icons {
 	display: flex;
@@ -43,62 +22,19 @@
 	height: 40px;
 }
 
-.part-bottom .menu-2 .menu-header-2 li {
-	font-family: 'Maitree';
-	font-size: 18px;
-	color: #000000;
-	text-decoration: none;
-	font-weight: 400;
-	text-decoration: none;
-	display: flex;
-	flex-direction: row;
+.icons a{
+  width: 42px;
 }
 
-
-.look {
-	width: 140px;
-	height: 40px;
-	background-color: #FFFEF3;
-	border: 1px solid #000000;
-	font-family: 'Maitree';
-	font-size: 18px;
-	color: #7B7B7B;
-	padding-left: 90px;
-    margin-top: 5px;
-	background-image: url('../Images/Loupe.svg');
-	background-repeat: no-repeat;
-	background-position-x: 20px;
-	background-position-y: center;
-}
-
-.part-bottom {
-	display: flex;
-	align-items: center;
-}
-
-.part-bottom .menu-2 .menu-header-2 {
-	display: flex;
-	gap: 30px;
-    margin: 0 120px 0 0;
-    padding-left: 40px;
-}
-
-.part-top .menu .menu-header {
+.menu-header {
 	display: flex;
 	gap: 30px;
 	align-items: center;
-    padding-left: 0;
 }
 
-.header .border-1 {
+.border-1 {
 	border-top: 3px solid #000;
 	width : 100%;
-}
-
-.part-top {
-	border-bottom: 1px solid black;
-	margin-left: 40px;
-	display: flex;
 }
 
 .coeur {
@@ -106,21 +42,95 @@
 	padding-right: 20px;
 }
 
-
 .person {
 	border-right: 1px solid black;
 	padding-right: 20px;
 }
 
+header {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  background-color: #FFFEF3;
+}
+
+.sub {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin: 10px 107px;
+}
+
+.menu-header-2 li {
+  font-family: 'Maitree';
+  font-size: 18px;
+  color: #000000;
+  text-decoration: none;
+  font-weight: 400;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.look {
+  width: 140px;
+  height: 40px;
+  background-color: #FFFEF3;
+  border: 1px solid #000000;
+  padding-left: 90px;
+  margin: 10px 0;
+  background-image: url('../Images/Loupe.svg');
+  background-position-x: 20px;
+  background-position-y: center;
+  background-repeat: no-repeat;
+}
+
+.part-bottom {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.menu-header-2 {
+  display: flex;
+  gap: 30px;
+  margin: 0 160px 0 0;
+}
+
 .part-left {
-	border-right: 1px solid black;
-	padding-right: 20px;
-	height: 120px;
+  height: 75px;
+  border-right: solid 1px black;
+  padding-right: 20px;
 }
 
 .logo-auth {
-	padding-top: 12%;
+  padding-top: 5%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -433,194 +443,112 @@ hr {
 
 
 
-.footer {
-background-color: black;
-  margin-top: 2%;
+footer {
+	background-color: black;
+    margin-top: 1%;
+	color: white;
 }
 
 .top-part {
-display: flex;
-}
-
-.footer .top-part .partie-1 {
-margin: 40px;
+	display: flex;
 }
 
 .footer p {
-color: white;
-font-family: 'Maitree';
+	color: white;
 }
 
 .exclu {
-font-size: 18px;
-font-weight: bold;
-margin-bottom: 15px;
+	font-weight: bold;
+	margin-bottom: 15px;
 }
 
 .cookies {
-font-size: 18px;
-font-weight: regular;
-margin-top: 15px;
+	margin-top: 15px;
 }
 
 .cookies a {
-color: white;
+	color: white;
 }
 
 .logo-authentist {
-margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .reseaux{
-display: flex;
-gap: 20px;
-margin-bottom: 30px;
+	display: flex;
+	gap: 20px;
+	margin-bottom: 30px;
 }
 
 .email {
-width: 300px;
-height: 71px;
-left: 82px;
-top: 6476px;
-background: #FFFEF3;
-border: 1px solid #000000;
-font-family: 'Maitree';
-font-size: 18px;
+	width: 300px;
+	background: #FFFEF3;
+	border: 1px solid #000000;
 }
 
 input::placeholder {
-  color: #000000;
+    color: #000000;
 }
 
 input {
-padding-left: 30px;
+	padding-left: 30px;
 }
 
 .ok {
-  display: block;
-width: 101px;
-height: 74.5px;
-left: 433px;
-top: 6476px;
-background: #94BCF9;
-border: 1px solid #000000;
-font-size: 18px;
-font-family: 'Maitree';
+	width: 101px;
+	height: 75px;
+	background: #94BCF9;
+	border: 1px solid #000000;
 }
 
 .forme {
-display: flex;
-flex-direction: row;
-align-items: stretch;
+	display: flex;
 }
 
-li {
-color: white;
-text-decoration: none;
-font-size: 18px;
-font-family: 'Maitree';
-font-weight: 400;
-display: flex;
-flex-direction: row;
+.cat {
+	font-weight: bold;
+	margin-bottom: 20px;
 }
 
-ul {
-color: white;
-font-size: 18px;
-font-weight: bold;
-font-family: 'Maitree';
-font-weight: 400;
-}
-
-.footer .partie-2 {
-margin: 40px;
-
-}
-
-.artiste {
-font-size: 18px;
-font-weight: bold;
-margin-bottom: 50px;
-}
-
-.plan {
-font-size: 18px;
-font-weight: bold;
-margin-bottom: 50px;
-}
-
-.aide {
-font-size: 18px;
-font-weight: bold;
-margin-bottom: 50px;
-}
-
-.footer .partie-3 {
-margin: 40px;
-
-}
-
-.footer .partie-4 {
-margin: 40px;
-
-}
-
-.paiement {
-font-size: 18px;
-font-weight: bold;
-margin-bottom: 10px;
+.parties {
+	margin: 40px 40px 0 40px;
 }
 
 .icon-paiement {
-display: flex;
-gap: 20px;
+	display: flex;
+	gap: 20px;
 }
 
-.foot .autre {
-display: flex;
+.autre {
+	display: flex;
 }
 
 .separation {
-margin-bottom: 70px;
-  line-height: 35px;
+	margin-bottom: 70px;
+    line-height: 35px;
 }
 
 .foot ul {
-display: flex;
-gap: 20px;
-margin-left: 10px;
+	display: flex;
+	gap: 20px;
+	margin-left: 10px;
 }
 
 .foot li{
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .final {
-  margin-left: 475px;
+    margin-left: 475px;
 }
-
 
 .second-part {
-padding-bottom: 10px;
+	padding-bottom: 10px;
+}
+.categories li {
+	line-height: 35px;
 }
 
-.liste-icon {
-padding-left: 0px;
-}
-
-
-.all-header{
-margin: 80px;
-}
-
-.body {
-background-color: #FFFEF3;
-}
-
-.lesartistes li {
-line-height: 35px;
-}
-
-.lesguides li {
-line-height: 35px;
+.categories {
+	margin-bottom: 40px;
 }
